#RTP_DIR
add_executable(printInfo ./main.cpp ./print.cpp)
#add_executable(mainStarter ./mainStarter/main.cc ./mainStarter/Starter.cc)
#target_link_libraries(mainStarter gdlp_base gdlp_adpters)
#install(TARGETS mainStarter  DESTINATION bin)

#add_executable(protocolParser ./protocols/main.cc ./protocols/protocolParser.cc  ./protocols/protocolParserLua.cc)
#add_executable(protocolParser ./protocols/main.cc ./protocols/protocolParser.cc)
#target_link_libraries(protocolParser gdlp_base gdlp_adpters lua dl boost_program_options quarterLuaCppFunction)
#install(TARGETS protocolPraser  DESTINATION bin)

